--- a/website/header.html
+++ b/website/header.html
@@ -131,4 +131,42 @@ looks aanpassen vande dropdown menu line : 14-17
     	</div>
 		</div>
 </div>
+<!--verification mail modal-->
+<div class="modal fade" id="MVerificationMail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+            <h5 class="modal-title">Verification mail</h5>
+            <button type="button" class="close" id="MVerificationMailBCrosse" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+          <div class="modal-body">
+            <p class="modalParagraph" id="MVerificationMailPMessage"></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" id="MVerificationMailBClose">Close</button>
+          </div>
+      </div>
+    </div>
+</div>
+<!--verification mail accepted modal-->
+<div class="modal fade" id="MVerificationMailAccepted" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+            <h5 class="modal-title">Verification mail</h5>
+            <button type="button" class="close" id="MVerificationMailAcceptedBCrosse" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+          <div class="modal-body">
+            <p class="modalParagraph">Your account has been verified</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" id="MVerificationMailAcceptedBClose">Close</button>
+          </div>
+      </div>
+    </div>
+</div>
 <script src="js/header.js" type="text/javascript"></script>
