--- a/website/footer.html
+++ b/website/footer.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="css/footer.css">
 <div id="footer">
-    <div class="row" id="footertext">
-        <div class="col-md-4 col-sm-12 col-xs-12">
+    <div class="row" id="footertext" style="display: flex;">
+        <div class="col-md-4 col-sm-12 col-xs-12 footer-ul-container">
         	<ul class="footer-ul">
 	            <li><h3>INFORMATION</h3></li>
 	            <li><a href="about.php">about us</a></li>
@@ -9,7 +9,7 @@
 	            <li><a href="faq.php">FAQ</a></li>
         	</ul>
         </div>
-        <div class="col-md-4 col-sm-12 col-xs-12">
+        <div class="col-md-4 col-sm-12 col-xs-12 footer-ul-container">
 	        <ul class="footer-ul">
 	            <li><h3>LINKS</h3></li>
 	            <li><a href="index.php">index</a></li>
@@ -19,7 +19,7 @@
 	            <li><a href="profile.php">profile</a></li>
 	        </ul>
         </div>
-        <div class="col-md-4 col-sm-12 col-xs-12">
+        <div class="col-md-4 col-sm-12 col-xs-12 footer-ul-container">
 	        <ul class="footer-ul">
 	            <li><h3>ACCOUNT</h3></li>
 	            <li><a class="footerSignup">sign up</a></li>
