--- a/website/header.html
+++ b/website/header.html
@@ -2,53 +2,51 @@
 looks aanpassen vande dropdown menu line : 14-17
 -->
 <nav class="navbar navbar-expand-lg fixed-top">
-<a class="navbar-brand" href="Index.php">
- Tradingcenter
-</a>
-      <div class="navbar-toggler-icon" id="menu"><i class="fa fa-bars"></i></div>
-<div class="collapse navbar-collapse" id="navb">
-    <div class="header-section-rigth">
-<ul class="navbar-items" id="rightButtonNav" >
-<li><a href="journal.php" class="nav-link">Journal</a></li>
-<li class="dropdown"><a href="datacenteroverview.php" class="nav-link">Datacenter</a>
-    <div class="dropdown-content">
-      <a id="boughtdata" class="dropdown-item" href="dataLibrary.php">Bought data</a>
-      <a id="solddata" class="dropdown-item">Sold data</a>
-      <a id="dataoverview" class="dropdown-item" href="yourDataOverView.php">Data overview</a>
+  <a class="navbar-brand" href="Index.php">Tradingcenter</a>
+  <div class="navbar-toggler-icon" id="menu"><i class="fa fa-bars"></i></div>
+    <div class="collapse navbar-collapse" id="navb">
+      <div class="header-section-rigth">
+        <ul class="navbar-items" id="rightButtonNav">
+        <li><a href="journal.php" class="nav-link">Journal</a></li>
+        <li class="dropdown"><a href="datacenteroverview.php" class="nav-link">Datacenter</a>
+          <div class="dropdown-content">
+            <a id="boughtdata" class="dropdown-item" href="dataLibrary.php">Bought data</a>
+            <a id="solddata" class="dropdown-item">Sold data</a>
+            <a id="dataoverview" class="dropdown-item" href="yourDataOverView.php">Data overview</a>
+          </div>
+        </li>
+        <div class="search-container">
+          <form method="GET" action="search.php" id="FSearch">
+            <input type="text" placeholder="Search.." name="search">
+            <button type="button" id="Bsearch"><i class="fa fa-search"></i></button>
+          </form>
+        </div>
+      </ul>
     </div>
-</li>
-<div class="search-container">
-<form method="GET" action="search.php" id="FSearch">
-    <input type="text" placeholder="Search.." name="search">
-    <button type="button" id="Bsearch"><i class="fa fa-search"></i></button>
-</form>
-</div>
-</ul>
-</div>
-</div>
-<div id="navbar-overlay" class="overlay">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <div class="overlay-content" id="rightButtonNav">
-    <!--<a href="home.php">Home</a>-->
-    <a href="journal.php">Journal</a>
+  </div>
+  <div id="navbar-overlay" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content" id="rightButtonNav">
+      <!--<a href="home.php">Home</a>-->
+      <a href="journal.php">Journal</a>
       <a href="datacenteroverview.php">Datacenter</a>
-</div>
     </div>
+  </div>
 </nav>
 <!--Login modal-->
-<div class="modal fade" id="MLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-		        <h5 class="modal-title">Login</h5>
-		        <button type="button" class="close" id="MLoginBCrosse" aria-label="Close">
-	          		<span aria-hidden="true">&times;</span>
-				</button>
-		    </div>
-      		<div class="modal-body">
-      			<!--<form action="Home.html">-->
-      			<p class="modalParagraph modalErrorMsg" id="MLoginEMMain" style="display: none;"></p>
-      			<p class="modalParagraph">Login</p>
+<div class="modal fade" id="MLogin" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+    <div class="modal-content">
+		  <div class="modal-header">
+        <h5 class="modal-title">Login</h5>
+          <button type="button" class="close" id="MLoginBCrosse" aria-label="Close">
+        		<span aria-hidden="true">&times;</span>
+  			  </button>
+        </div>
+    		<div class="modal-body">
+    			<!--<form action="Home.html">-->
+    			<p class="modalParagraph modalErrorMsg" id="MLoginEMMain" style="display: none;"></p>
+    			<p class="modalParagraph">Login</p>
   				<input type="text" name="username" placeholder="Username" id="MLoginIUsername" autocomplete="off">
   				<span class="modalErrorMsg" id="MLoginEMUsername"></span>
   				<p class="modalParagraph">Password</p>
@@ -56,9 +54,9 @@ looks aanpassen vande dropdown menu line : 14-17
   				<span class="modalErrorMsg" id="MLoginEMPassword"></span>
   				<br>
   				<p id="MLoginremember">Remember me<input type="checkbox" name="remimberMe" id="CBremimberMe"></p>
-  				<p id="MLoginBForgotPassword">Forgot password?</p>
+  				<!--<p id="MLoginBForgotPassword">Forgot password?</p>-->
   				<p id="MLoginBSignUp">don't have an account?</p>
-      			<!--</form>-->
+    			<!--</form>-->
       		</div>
       		<div class="modal-footer">
         		<button type="button" class="btn btn-primary" id="MLoginBLogin">Login</button>
@@ -68,104 +66,104 @@ looks aanpassen vande dropdown menu line : 14-17
 		</div>
 </div>
 <!--Sign up modal-->
-<div class="modal fade" id="MSignUp" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
+<div class="modal fade" id="MSignUp" tabindex="-1" role="dialog" aria-labelledby="signUpModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-		        <h5 class="modal-title">Sign up</h5>
-		        <button type="button" class="close" id="MSignUpBCrosse" aria-label="Close">
-	          		<span aria-hidden="true">&times;</span>
+        <h5 class="modal-title">Sign up</h5>
+        <button type="button" class="close" id="MSignUpBCrosse" aria-label="Close">
+      		<span aria-hidden="true">&times;</span>
 				</button>
-		    </div>
-      		<div class="modal-body">
-      			<!-- <form action="Home.html"> -->
-      				<p class="modalParagraph">Login</p>
-      				<input type="text" name="username" placeholder="Username" id="MSignUpIUsername" autocomplete="off">
-      				<span class="modalErrorMsg" id="MSignUpEMUsername"></span>
-      				<p class="modalParagraph">Password (8 characters or longer)</p>
-      				<input type="password" name="password" placeholder="Password" id="MSignUpIPassword">
-      				<span class="modalErrorMsg" id="MSignUpEMPassword"></span>
-      				<p class="modalParagraph">Re-password</p>
-      				<input type="password" name="password" placeholder="Re-password" id="MSignUpIRePassword">
-      				<span class="modalErrorMsg" id="MSignUpEMRePassword"></span>
-      				<p class="modalParagraph">Email</p>
-      				<input type="text" name="password" placeholder="Email" id="MSignUpIEmail" autocomplete="off">
-      				<span class="modalErrorMsg" id="MSignUpEMEmail"></span>
-              <p>Accept <a href="">Terms of Service </a><input type="checkbox" name="accept" id="MSignUpIAccept"></p>
-              <span class="modalErrorMsg" id="MSignUpEMTermsOfService"></span>
-      				<p id="MSignUpBLogin">already have an account?</p>
-      			<!-- </form> -->
-      		</div>
-      		<div class="modal-footer">
-        		<button type="button" class="btn btn-primary" id="MSignUpBSignUp">Sign up</button>
-        		<button type="button" class="btn btn-secondary" id="MSignUpBClose">Close</button>
-      		</div>
-    	</div>
-		</div>
+	    </div>
+  		<div class="modal-body">
+  			<!-- <form action="Home.html"> -->
+				<p class="modalParagraph">Login</p>
+				<input type="text" name="username" placeholder="Username" id="MSignUpIUsername" autocomplete="off">
+				<span class="modalErrorMsg" id="MSignUpEMUsername"></span>
+				<p class="modalParagraph">Password (8 characters or longer)</p>
+				<input type="password" name="password" placeholder="Password" id="MSignUpIPassword">
+				<span class="modalErrorMsg" id="MSignUpEMPassword"></span>
+				<p class="modalParagraph">Re-password</p>
+				<input type="password" name="password" placeholder="Re-password" id="MSignUpIRePassword">
+				<span class="modalErrorMsg" id="MSignUpEMRePassword"></span>
+				<p class="modalParagraph">Email</p>
+				<input type="text" name="password" placeholder="Email" id="MSignUpIEmail" autocomplete="off">
+				<span class="modalErrorMsg" id="MSignUpEMEmail"></span>
+        <p>Accept <a href="">Terms of Service </a><input type="checkbox" name="accept" id="MSignUpIAccept"></p>
+        <span class="modalErrorMsg" id="MSignUpEMTermsOfService"></span>
+				<p id="MSignUpBLogin">already have an account?</p>
+  			<!-- </form> -->
+  		</div>
+  		<div class="modal-footer">
+    		<button type="button" class="btn btn-primary" id="MSignUpBSignUp">Sign up</button>
+    		<button type="button" class="btn btn-secondary" id="MSignUpBClose">Close</button>
+  		</div>
+  	</div>
+	</div>
 </div>
 <!--Forgot password modal-->
-<div class="modal fade" id="MForgotPassword" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
+<div class="modal fade" id="MForgotPassword" tabindex="-1" role="dialog" aria-labelledby="forgotPasswordModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-		        <h5 class="modal-title">Forgot password</h5>
-		        <button type="button" class="close" id="MForgotPasswordBCrosse" aria-label="Close">
-	          		<span aria-hidden="true">&times;</span>
+        <h5 class="modal-title">Forgot password</h5>
+        <button type="button" class="close" id="MForgotPasswordBCrosse" aria-label="Close">
+      		<span aria-hidden="true">&times;</span>
 				</button>
-		    </div>
-      		<div class="modal-body">
-      			<form action="home.html">
-      				<p class="modalParagraph">Username</p>
-      				<input type="text" name="username" id="MForgotPasswordIUsername" placeholder="Username" autocomplete="off">
-      				<span class="modalErrorMsg"></span>
-					<p class="modalParagraph">Email</p>
-      				<input type="text" name="email" id="MForgotPasswordIEmail" placeholder="Email" autocomplete="off">
-      				<span class="modalErrorMsg"></span>
-      			</form>
-      		</div>
-      		<div class="modal-footer">
-        		<button type="button" class="btn btn-primary" id="MForgotPasswordBForgotPassword">Send</button>
-        		<button type="button" class="btn btn-secondary" id="MForgotPasswordBClose">Close</button>
-      		</div>
-    	</div>
-		</div>
+	    </div>
+  		<div class="modal-body">
+			<!--<form action="home.html"> -->
+				<p class="modalParagraph">Username</p>
+				<input type="text" name="username" id="MForgotPasswordIUsername" placeholder="Username" autocomplete="off">
+				<span class="modalErrorMsg"></span>
+        <p class="modalParagraph">Email</p>
+				<input type="text" name="email" id="MForgotPasswordIEmail" placeholder="Email" autocomplete="off">
+				<span class="modalErrorMsg"></span>
+			<!--</form> -->
+		  </div>
+		  <div class="modal-footer">
+    		<button type="button" class="btn btn-primary" id="MForgotPasswordBForgotPassword">Send</button>
+    		<button type="button" class="btn btn-secondary" id="MForgotPasswordBClose">Close</button>
+  		</div>
+  	</div>
+	</div>
 </div>
 <!--verification mail modal-->
-<div class="modal fade" id="MVerificationMail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="MVerificationMail" tabindex="-1" role="dialog" aria-labelledby="verificationMailModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-            <h5 class="modal-title">Verification mail</h5>
-            <button type="button" class="close" id="MVerificationMailBCrosse" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+        <h5 class="modal-title">Verification mail</h5>
+        <button type="button" class="close" id="MVerificationMailBCrosse" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
         </button>
-        </div>
-          <div class="modal-body">
-            <p class="modalParagraph" id="MVerificationMailPMessage"></p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" id="MVerificationMailBClose">Close</button>
-          </div>
+      </div>
+      <div class="modal-body">
+        <p class="modalParagraph" id="MVerificationMailPMessage"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" id="MVerificationMailBClose">Close</button>
       </div>
     </div>
+  </div>
 </div>
 <!--verification mail accepted modal-->
-<div class="modal fade" id="MVerificationMailAccepted" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="MVerificationMailAccepted" tabindex="-1" role="dialog" aria-labelledby="verificationMailAcceptedModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-            <h5 class="modal-title">Verification mail</h5>
-            <button type="button" class="close" id="MVerificationMailAcceptedBCrosse" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+        <h5 class="modal-title">Verification mail</h5>
+        <button type="button" class="close" id="MVerificationMailAcceptedBCrosse" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
         </button>
-        </div>
-          <div class="modal-body">
-            <p class="modalParagraph">Your account has been verified</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" id="MVerificationMailAcceptedBClose">Close</button>
-          </div>
+      </div>
+      <div class="modal-body">
+        <p class="modalParagraph">Your account has been verified</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" id="MVerificationMailAcceptedBClose">Close</button>
       </div>
     </div>
+  </div>
 </div>
 <script src="js/header.js" type="text/javascript"></script>
