--- a/website/header.html
+++ b/website/header.html
@@ -53,7 +53,7 @@ looks aanpassen vande dropdown menu line : 14-17
   				<input type="password" name="password" placeholder="Password" id="MLoginIPassword">
   				<span class="modalErrorMsg" id="MLoginEMPassword"></span>
   				<br>
-  				<p id="MLoginremember">Remember me<input type="checkbox" name="remimberMe" id="CBremimberMe"></p>
+  				<!--<p id="MLoginremember">Remember me<input type="checkbox" name="remimberMe" id="CBremimberMe"></p>-->
   				<!--<p id="MLoginBForgotPassword">Forgot password?</p>-->
   				<p id="MLoginBSignUp">don't have an account?</p>
     			<!--</form>-->
@@ -102,6 +102,7 @@ looks aanpassen vande dropdown menu line : 14-17
 	</div>
 </div>
 <!--Forgot password modal-->
+<!--
 <div class="modal fade" id="MForgotPassword" tabindex="-1" role="dialog" aria-labelledby="forgotPasswordModalLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
@@ -112,14 +113,18 @@ looks aanpassen vande dropdown menu line : 14-17
 				</button>
 	    </div>
   		<div class="modal-body">
-			<!--<form action="home.html"> -->
+      -->
+			<!--<form action="home.html">-->
+        <!--
 				<p class="modalParagraph">Username</p>
 				<input type="text" name="username" id="MForgotPasswordIUsername" placeholder="Username" autocomplete="off">
 				<span class="modalErrorMsg"></span>
         <p class="modalParagraph">Email</p>
 				<input type="text" name="email" id="MForgotPasswordIEmail" placeholder="Email" autocomplete="off">
 				<span class="modalErrorMsg"></span>
+        -->
 			<!--</form> -->
+      <!--
 		  </div>
 		  <div class="modal-footer">
     		<button type="button" class="btn btn-primary" id="MForgotPasswordBForgotPassword">Send</button>
@@ -128,6 +133,7 @@ looks aanpassen vande dropdown menu line : 14-17
   	</div>
 	</div>
 </div>
+-->
 <!--verification mail modal-->
 <div class="modal fade" id="MVerificationMail" tabindex="-1" role="dialog" aria-labelledby="verificationMailModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
