few changes to the styling of the header modals

--- a/website/header.html
+++ b/website/header.html
@@ -2,7 +2,7 @@
 looks aanpassen vande dropdown menu line : 14-17
 -->
 <nav class="navbar navbar-expand-lg fixed-top">
-  <a class="navbar-brand" href="Index.php">Tradingcenter</a>
+  <a class="navbar-brand" href="Index.php" id="nav-title">Tradingcenter</a>
   <div class="navbar-toggler-icon" id="menu"><i class="fa fa-bars"></i></div>
     <div class="collapse navbar-collapse" id="navb">
       <div class="header-section-rigth">
@@ -89,7 +89,7 @@ looks aanpassen vande dropdown menu line : 14-17
 				<p class="modalParagraph">Email</p>
 				<input type="text" name="password" placeholder="Email" id="MSignUpIEmail" autocomplete="off">
 				<span class="modalErrorMsg" id="MSignUpEMEmail"></span>
-        <p>Accept <a href="">Terms of Service </a><input type="checkbox" name="accept" id="MSignUpIAccept"></p>
+        <p>Accept <a href="" class="terms">terms of service</a><input type="checkbox" class="nav-checkbox" name="accept" id="MSignUpIAccept"></p>
         <span class="modalErrorMsg" id="MSignUpEMTermsOfService"></span>
 				<p id="MSignUpBLogin">already have an account?</p>
   			<!-- </form> -->
