Added TOS, added comments, added content to the about page, improved footer functionality a little

--- a/website/footer.html
+++ b/website/footer.html
@@ -22,8 +22,10 @@
         <div class="col-md-4 col-sm-12 col-xs-12 footer-ul-container">
 	        <ul class="footer-ul">
 	            <li><h3>ACCOUNT</h3></li>
-	            <li><a class="footerSignup">sign up</a></li>
-	            <li><a class="footerSignup">login</a></li>
+	            <div id="accountLinks">
+	            	<li><a id="footerSignup">sign up</a></li>
+	            	<li><a id="footerLogin">login</a></li>
+	            </div>
 	        </ul>
         </div>
     </div>
