Renamed guides.css, made some small changes

--- a/website/footer.html
+++ b/website/footer.html
@@ -5,7 +5,7 @@
         	<ul class="footer-ul">
 	            <li><h3>INFORMATION</h3></li>
 	            <li><a href="about.php">about us</a></li>
-	            <li><a href="guides.php">guides</a></li>
+	            <li><a href="guide.php">guides</a></li>
 	            <li><a href="faq.php">FAQ</a></li>
         	</ul>
         </div>
