--- a/website/header.html
+++ b/website/header.html
@@ -49,7 +49,7 @@
   				<input type="password" name="password" placeholder="Password" id="MLoginIPassword">
   				<span class="modalErrorMsg" id="MLoginEMPassword"></span>
   				<br>
-  				<p id="MLoginBSignUp">don't have an account?</p>
+  				<p id="MLoginBSignUp">Don't have an account?</p>
       		</div>
       		<div class="modal-footer">
         		<button type="button" class="btn btn-primary" id="MLoginBLogin">Login</button>
@@ -75,15 +75,15 @@
 				<p class="modalParagraph">Password (8 characters or longer)</p>
 				<input type="password" name="password" placeholder="Password" id="MSignUpIPassword">
 				<span class="modalErrorMsg" id="MSignUpEMPassword"></span>
-				<p class="modalParagraph">Re-password</p>
+				<p class="modalParagraph">Re-type password</p>
 				<input type="password" name="password" placeholder="Re-password" id="MSignUpIRePassword">
 				<span class="modalErrorMsg" id="MSignUpEMRePassword"></span>
 				<p class="modalParagraph">Email</p>
 				<input type="text" name="password" placeholder="Email" id="MSignUpIEmail" autocomplete="off">
 				<span class="modalErrorMsg" id="MSignUpEMEmail"></span>
-        <p>Accept <a href="" class="terms">terms of service</a><input type="checkbox" class="nav-checkbox" name="accept" id="MSignUpIAccept"></p>
+        <p>Accept <a href="" class="terms">Terms of service</a><input type="checkbox" class="nav-checkbox" name="accept" id="MSignUpIAccept"></p>
         <span class="modalErrorMsg" id="MSignUpEMTermsOfService"></span>
-				<p id="MSignUpBLogin">already have an account?</p>
+				<p id="MSignUpBLogin">Already have an account?</p>
   		</div>
   		<div class="modal-footer">
     		<button type="button" class="btn btn-primary" id="MSignUpBSignUp">Sign up</button>
