--- a/website/header.html
+++ b/website/header.html
@@ -8,8 +8,8 @@
         <li><a href="journal.php" class="nav-link">Journal</a></li>
         <li class="dropdown"><a href="datacenteroverview.php" class="nav-link">Datacenter</a>
           <div class="dropdown-content">
+            <a id="solddata" class="dropdown-item">Datacenter</a>
             <a id="boughtdata" class="dropdown-item" href="dataLibrary.php">Bought data</a>
-            <a id="solddata" class="dropdown-item">Sold data</a>
             <a id="dataoverview" class="dropdown-item" href="yourDataOverView.php">Data overview</a>
           </div>
         </li>
