Revert "Started adding cookie banner"
This reverts commit 5a78bd93c0b1241162309c4fdc6843dcdcf3c233.

--- a/website/header.html
+++ b/website/header.html
@@ -81,7 +81,7 @@
 				<p class="modalParagraph">Email</p>
 				<input type="text" name="password" placeholder="Email" id="MSignUpIEmail" autocomplete="off">
 				<span class="modalErrorMsg" id="MSignUpEMEmail"></span>
-        <p>Accept <a href="" class="terms">Terms of service</a><input type="checkbox" class="nav-checkbox" name="accept" id="MSignUpIAccept"></p>
+        <p>Accept <a href="TOS.php" class="terms">terms of service</a><input type="checkbox" class="nav-checkbox" name="accept" id="MSignUpIAccept"></p>
         <span class="modalErrorMsg" id="MSignUpEMTermsOfService"></span>
 				<p id="MSignUpBLogin">Already have an account?</p>
   		</div>
@@ -129,13 +129,5 @@
       </div>
     </div>
   </div>
-</div>
-<!--cookie banner-->
-<div id="banner">
-  <h4>We care about your privacy.</h4>
-  <p id="cookieButton">Agree</p>
-  <br>
-  <p>That's why we want you to allow us to sell all of your data and commit several privacy violations.</p>
-
 </div>
 <script src="js/header.js" type="text/javascript"></script>
