--- a/website/header.html
+++ b/website/header.html
@@ -131,7 +131,7 @@
   </div>
 </div>
 <!--cookie banner-->
-<div id="banner">
+<div id="banner" style="visibility: hidden;">
   <h4>We care about your privacy.</h4>
   <p id="cookieButton">Agree</p>
   <br>
