--- a/website/footer.html
+++ b/website/footer.html
@@ -7,6 +7,7 @@
 	            <li><a href="about.php">about us</a></li>
 	            <li><a href="guide.php">guides</a></li>
 	            <li><a href="faq.php">FAQ</a></li>
+	            <li><a href="tos.php">TOS</a></li>
         	</ul>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12 footer-ul-container">
