--- a/website/header.html
+++ b/website/header.html
@@ -5,7 +5,7 @@
     <div class="collapse navbar-collapse" id="navb">
       <div class="header-section-rigth">
         <ul class="navbar-items" id="rightButtonNav">
-        <li><a href="journal.php" class="nav-link">Journal</a></li>
+        <li><a href="journal.php" id="journal" class="nav-link">Journal</a></li>
         <li class="dropdown"><a href="datacenteroverview.php" class="nav-link">Datacenter</a>
           <div class="dropdown-content">
             <a id="solddata" class="dropdown-item" href="datacenteroverview.php" style="color: black;">Datacenter</a>
